Fixed hr spacing and issue with favico for posts

--- a/css/site.css
+++ b/css/site.css
@@ -46,7 +46,6 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 2.5rem;
-  /*margin-bottom: 2.5rem;*/
   font-weight: 700;
   margin-left: -2rem;
   margin-right: -2rem;
@@ -55,7 +54,6 @@ h1 {
 @media (min-width: 30rem) {
   h1 {
     font-size: 4rem;
-    /*margin-bottom: 10rem;*/
   }
 }
 
@@ -137,7 +135,7 @@ blockquote p:last-child {
 
 hr {
   border: none;
-  /*margin: 1.5rem 0;*/
+  margin: 2.5rem 0;
   border-bottom: 1px solid #ccc;
   position: relative;
   top: -1px;
